# kolmogorov-generator

./: Cargo.toml  LICENSE  Readme.md  kolmogorov_generator.pyi  pyproject.toml
src/: inner_tape_machine.rs  kolmogorov_gen.rs  kolmogorov_inner_state_gen.rs  lib.rs  turing_machine.rs
src/tests/: mod.rs  test_random_machines_not_crashing.rs  test_simple_machine.rs
